# Spectrumizer

./: .gitattributes  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md  generate_sln.bat
cmake/: GenerateShaderStrings.cmake
inc/app/: AppClipboard.h  AppConfig.h  AppDataManager.h  AppTextureManager.h  AppUiManager.h  Application.h  PathTracerApp.h
inc/app/core/: PathTracer.h  PostProcesser.h  Previewer.h
inc/app/data/: PtMaterial.h  PtMesh.h  PtModel.h  PtScene.h  SpMaterial.h  SpWave.h
inc/app/ui/: UiAboutWindow.hpp  UiLeftPanel.hpp  UiMainViewport.hpp  UiMenuBar.hpp  UiRightPanel.hpp  UiSaveDialog.hpp  UiSettingsWindow.hpp  UiStatusBar.hpp  UiToolBar.hpp
inc/db/: DbCommon.h  DbPr.h  DbPub.h  DbSerializer.h
inc/gfx/: GfxCommon.h  GfxFormat.h  GfxPipelineState.h  GfxPr.h  GfxPub.h
inc/gfx/backends/gl/: GfxGLPipelineState.h  GfxGLRenderer.h  GfxGLTypeConverter.h
inc/gfx/backends/vulkan/: GfxVkTypeConverter.h  GfxVulkanPipelineState.h  GfxVulkanRenderer.h
inc/gui/: GuiCommon.h  GuiPr.h  GuiPub.h
inc/gui/impl/: GuiWindowGLFW.h
inc/res/: AppIcon.hpp  LangStrings.h  ShaderStrings.hpp  ShaderStringsUtils.hpp
inc/utils/: Flags.hpp  FrameTimer.h  Image.h  Logger.hpp  Math.h  Mesh.h  ScopeGuard.hpp  Stopwatch.h  Stopwatch.hpp  UtilsCommon.h
resources/rc/: resource.rc
resources/shaders/: pathTracer.comp  preview.frag  preview.vert  quad.frag  quad.vert
resources/strings/: en_US.json  zh_CN.json
src/: main.cpp
src/app/: AppClipboard.cpp  AppConfig.cpp  AppDataManager.cpp  AppTextureManager.cpp  AppUiManager.cpp  Application.cpp  PathTracerApp.cpp
src/app/core/: PathTracer.cpp  PostProcesser.cpp  Previewer.cpp
src/app/data/: PtMaterial.cpp  PtMesh.cpp  PtModel.cpp  PtScene.cpp  SpMaterial.cpp  SpWave.cpp
src/db/: DB.cpp  DbSerializer.cpp  DbUtils.cpp
src/gfx/: GfxPipelineState.cpp  GfxRenderer.cpp
src/gfx/backends/gl/: GfxGLPipelineState.cpp  GfxGLRenderer.cpp  GfxGLTypeConverter.cpp
src/gfx/backends/vulkan/: GfxVkTypeConverter.cpp  GfxVulkanPipelineState.cpp  GfxVulkanRenderer.cpp
src/gui/: GuiText.cpp  GuiView.cpp  GuiWindow.cpp
src/gui/impl/: GuiWindowGLFW.cpp
src/res/: LangStrings.cpp
src/utils/: FrameTimer.cpp  Image.cpp  Math.cpp  Mesh.cpp  Stopwatch.cpp
